# SZ3-predict-2022

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  sz3.config  sz3.cpp  sz3_collect.cpp  sz3_compress.cpp  sz3_decompress.cpp  sz3_mpi_cesm.cpp  sz3_mpi_collect.cpp  sz3_mpi_compress.cpp  sz3_mpi_compress_multi_file.cpp  sz3_mpi_compress_one_file.cpp  sz3_mpi_cp_cesm_multi_file.cpp  sz3_mpi_decompress.cpp  sz3_mpi_decompress_multi_file.cpp  sz3_mpi_decompress_one_file.cpp  sz3_mpi_dpcesm.cpp  sz3_predict.cpp  sz_verify.cpp  testfloat_8_8_128.dat.sz  testfloat_8_8_128.dat.sz.tmp
include/: qcat_dataAnalysis.h
include/SZ3/api/: sz.hpp
include/SZ3/api/impl/: SZDispatcher.hpp  SZLorenzoReg.hpp
include/SZ3/compressor/: SZGeneralCompressor.hpp
include/SZ3/encoder/: HuffmanEncoder.hpp
include/SZ3/frontend/: SZFastFrontend.hpp  SZGeneralFrontend.hpp
include/SZ3/lossless/: Lossless_zstd.hpp
